fix uneven whitespace issue

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,22 +17,31 @@
  *= require_tree .
  */
 
+ html, body{
+   margin: 0;
+   height: 100%;
+
+ }
+
 body {
-  background-color:#F2F2F2;
+  background-color: #F2F2F2;
   display: flex;
   justify-content: center;
-  // overflow-x: hidden;
 }
 
 #root{
   width: 90%;
   display: flex;
   justify-content: center;
+  // background-color: white;
+  height: 100%;
 }
 
 .app-container{
   width: 100%;
   max-width: 1269px;
+  background-color: white;
+  // height: 75.6rem;
 }
 
 @media all and (max-width: 1240px){
