--- a/app/assets/stylesheets/error.css.scss
+++ b/app/assets/stylesheets/error.css.scss
@@ -1,16 +1,18 @@
 @import "variables";
 
 .error-404-container{
-  margin-top: 2.86rem;
+  // margin-top: 2.86rem;
   font-family: $roboto;
   font-size: $normal;
   color: $black;
-  background-color: $white;
-  border: 1px solid black;
+  // background-color: $coral;
+  // border: 1px solid black;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  text-align: center;
+  height: 100%;
 }
   .error-404-oops{
     background-image: url("404.jpg");
@@ -19,18 +21,36 @@
     font-size: 13rem;
     font-weight: 900;
     letter-spacing: .7rem;
+    margin-top: 5rem;
   }
 
   .error-404-details{
     border: 1px solid blue;
+    margin-top: 1rem;
   }
     .error-404-code{
-      border: 1px solid red;
+      font-size: 2rem;
+      font-weight: 500;
     }
     .error-404-message{
-      border: 1px solid green;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-evenly;
+      align-items: center;
+      margin-top: 1rem;
+      height: 50px;
     }
 
   .error-404-button{
     border: 1px solid orange;
+  }
+
+
+  .body-border{
+    // background-color:  blue;
+    // background-color:$gray;
+    // background-color: yellow;
+    // width: 100px;
+    // height: 100%;
+    // border: 1px solid blue;
   }
