--- a/app/assets/stylesheets/variables.scss
+++ b/app/assets/stylesheets/variables.scss
@@ -24,3 +24,4 @@ $normal: 14px;
 $mid-small: 12px;
 $small: 11px;
 $roboto: 'Roboto', sans-serif;
+$jua: 'Jua', sans-serif;
